--- a/packages/packageB/package.json
+++ b/packages/packageB/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "packageB",
+    "name": "@mjeightyfive/packageB",
     "version": "0.0.0",
     "description": "packageB",
     "license": "MIT",
