--- a/.npmrc
+++ b/.npmrc
@@ -2,4 +2,4 @@ save-exact=true
 tag-version-prefix=
 git-tag-version=true
 package-lock=false
-registry=http://localhost:4873
+@mjeightyfive:registry="https://npm.pkg.github.com"
