--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
     "version": "1.0.0",
     "description": "Example setup for changesets workflow in a monorepo",
     "main": "index.js",
+    "publishConfig": {
+        "registry":"https://npm.pkg.github.com/"
+    },
     "scripts": {
         "test": "lerna run test",
-        "build": "lerna run build"
+        "build": "lerna run build",
+        "publish": "lerna publish from-package --y --no-verify-access"
     },
     "repository": {
         "type": "git",
@@ -28,6 +32,7 @@
         "@babel/core": "7.9.0",
         "@babel/plugin-transform-runtime": "7.9.0",
         "@babel/preset-env": "7.9.0",
+        "@changesets/cli": "2.6.2",
         "babel-jest": "25.2.3",
         "jest": "25.2.3",
         "lerna": "^3.20.2"
