--- a/packages/packageA/package.json
+++ b/packages/packageA/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@mjeightyfive/packageA",
+    "name": "@mjeightyfive/package-a",
     "version": "0.0.0",
     "description": "packageA",
     "license": "MIT",
