--- a/packages/packageC/package.json
+++ b/packages/packageC/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@mjeightyfive/packageC",
+    "name": "@mjeightyfive/package-c",
     "version": "0.0.0",
     "description": "packageC",
     "license": "MIT",
