--- a/packages/packageA/package.json
+++ b/packages/packageA/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mjeightyfive/package-a",
+  "name": "@mjefi/package-a",
   "version": "0.0.1",
   "description": "packageA",
   "license": "MIT",
