--- a/packages/packageB/package.json
+++ b/packages/packageB/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mjeightyfive/package-b",
+  "name": "@mjefi/package-b",
   "version": "0.0.1",
   "description": "packageB",
   "license": "MIT",
