--- a/packages/packageC/package.json
+++ b/packages/packageC/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mjeightyfive/package-c",
+  "name": "@mjefi/package-c",
   "version": "0.0.1",
   "description": "packageC",
   "license": "MIT",
