--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,7 +39,7 @@ jobs:
               with:
                   node-version: 12
                   registry-url: https://npm.pkg.github.com/
-                  scope: '@mjeightyfive'
+                  scope: '@mjefi'
             - run: npm i
             - run: npm run build
             - run: npm run publish
