--- a/.npmrc
+++ b/.npmrc
@@ -2,4 +2,4 @@ save-exact=true
 tag-version-prefix=
 git-tag-version=true
 package-lock=false
-@mjefi:registry="https://npm.pkg.github.com"
+@mjefi:registry="https://npm.pkg.github.com/"
