--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,8 +10,9 @@ jobs:
             - uses: actions/checkout@v1
             - uses: actions/setup-node@v1
               with:
-                  node-version: 12
-            - run: npm i
+                  node-version: 10
+            - run: npm install --ignore-scripts
+            - run: npm run build --if-present
             - run: npm t
 
     publish:
@@ -23,7 +24,7 @@ jobs:
             - name: Setup Node.js
               uses: actions/setup-node@v1
               with:
-                  node-version: 12
+                  node-version: 10
                   registry-url: https://npm.pkg.github.com/
                   scope: '@mjefi'
             - name: Install Dependencies
