--- a/packages/package-b/package.json
+++ b/packages/package-b/package.json
@@ -4,6 +4,7 @@
   "description": "packageB",
   "license": "MIT",
   "main": "dist/index.js",
+  "files": "dist/**/*",
   "author": {
     "name": "Author"
   },
