--- a/packages/package-b/package.json
+++ b/packages/package-b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "files": "dist/**/*",
   "author": {
-    "name": "Author"
+    "name": "Marcin"
   },
   "repository": {
     "type": "git",
