--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,7 @@ jobs:
                   registry-url: https://npm.pkg.github.com/
                   scope: '@mjefi'
             - name: Install Dependencies
-              run: npm i
+              run: npm install --ignore-scripts
             - name: Create Release Pull Request or Publish to npm
               uses: changesets/action@master
               with:
